--- a/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
@@ -245,6 +245,7 @@
 
         <!-- JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/error-handler.js" asp-append-version="true"></script>
 
         <!-- تطبيق JavaScript مخصص - Custom JavaScript -->
         <script>
