--- a/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
@@ -7,8 +7,9 @@
     <title>@ViewData["Title"] - نظام إدارة المكتبة</title>
 
     <!-- Bootstrap CSS with RTL support -->
-    <link href="~/lib/jquery-validation/dist/css/bootstrap.rtl.min.css" rel="stylesheet" />
-    <link href="~/lib/jquery-validation/dist/css/all.min.css" rel="stylesheet" />
+    <link href="~/css/bootstrap.rtl.min.css" rel="stylesheet" />
+    @* <link href="~/css/all.min.css" rel="stylesheet" />  *@
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 
     <style>
         /* تخصيص الخطوط العربية - Arabic font customization */
